CHANGES IN FLTK 1.3.0

	- Added alternative Xft font names (STR #2215)
	- Update lib png access (STR #2442)
	- Fixed OpenGL hide/show issue in OS X (STR #2260)
	- Added visual feedback for button shortcuts (STR #2372)
	- Fixed internationalisation of menus using FLuid (STR #2246)
	- Fixed blinking of selection when the mouse was dragged 
	  outside of the Fl_Text_* widget
	- Added drag'n'drop support for Fl_Text_*
	- Fixed Unicode support for Fl_Text_* widgets
	- Added mouse!=0 check in Fl_Glut_Window::handle (STR #2381)
	- Fixed menu and shortcut handling (STR #2243)
	- Removed support for gcc 2.x (or older)
	- Fixed fltk-config to give --libs on one line (STR #2408)
	- Fixed tab key navigation to inactive widgets (STR #2420)
	- Fixed outside label redraw damage areas (STR #2436)
	- Added callback when double-clicking file in a file chooser
	  (STR #2346)
	- Fixed label alignment (STR #2436)
	- Added interface to set color chooser mode (STR #2407)
	- Fixed compile errors when HAVE_LIBJPEG was not defined 
	  (STR #2382)
	- Fixed special handling for ISO back-tab keycode (STR #2369)
	- Fixed wrong relative path (STR #2384)
	- Fixed static allocation in Fl_Tabs (STR #2370)
	- Fixed Fl_Widget::measure_label() to const (STR #2406)
	- Added step by step README's for MSWindows, OS X, and four
	  Linux distros
	- Fixed unbalanced Windows OleInitialize/OleUnitialize calls
	  when loading/unloading the FLTK dll (STR #2417)
	- Fixed X11/XDBE double buffering (STR #2152, #2197)
	- Added new label and image alignments (STR #2269)
	- Added documentation for event delivery (STR #1983)
	- Fixed menu and tooltip window animation bug under X11 (compiz)
	  by setting an appropriate window type (STR #2082)
	- redesigned CMake files (STR #2317).
	- Fixed max. fd calculation, if USE_POLL is enabled (STR #2324)
	- Fixed clipping for offscreen rendering (OSX, STR #2330)
	- Added printing support (Fl_Printer class and friends) for native